language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_type_parameter_name.snap
---
source: language-server/src/tests/action.rs
expression: "type Wrapper(innerType) {}"
---
----- BEFORE ACTION
type Wrapper(innerType) {}
             ▔▔▔▔▔▔▔▔▔↑   


----- AFTER ACTION
type Wrapper(inner_type) {}
