language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_use_discard.snap
---
source: language-server/src/tests/action.rs
expression: "fn use_test(f) { f(Nil) }\npub fn main() {use _discardVar <- use_test()}"
---
----- BEFORE ACTION
fn use_test(f) { f(Nil) }
pub fn main() {use _discardVar <- use_test()}
                             ↑               


----- AFTER ACTION
fn use_test(f) { f(Nil) }
pub fn main() {use _discard_var <- use_test()}
