language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_variable.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let theAnswer = 42\n}"
---
----- BEFORE ACTION
pub fn main() {
    let theAnswer = 42
        ▔▔▔↑          
}


----- AFTER ACTION
pub fn main() {
    let the_answer = 42
}
