language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_variable_discard.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let _boringNumber = 72\n}"
---
----- BEFORE ACTION
pub fn main() {
    let _boringNumber = 72
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑ 
}


----- AFTER ACTION
pub fn main() {
    let _boring_number = 72
}
