language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_module_for_imported.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport gleam/io\n\npub fn main() {\n  i.println(\"Hello, world!\")\n}\n"
---
----- BEFORE ACTION

import gleam/io

pub fn main() {
  i.println("Hello, world!")
  ▔▔↑                       
}


----- AFTER ACTION

import gleam/io

pub fn main() {
  io.println("Hello, world!")
}
