language-server/src/tests/snapshots/gleam_language_server__tests__action__replace_nested_underscore_with_generic_type.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble() -> Result(a, _) {\n    Ok(todo)\n}\n    "
---
----- BEFORE ACTION

pub fn wibble() -> Result(a, _) {
                             ↑   
    Ok(todo)
}
    


----- AFTER ACTION

pub fn wibble() -> Result(a, b) {
    Ok(todo)
}
