language-server/src/tests/snapshots/gleam_language_server__tests__action__replace_nested_underscore_with_tuple_type.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble() {\n    let a: #(Int, _, Int) = #(1, \"hello\", 2)\n}\n    "
---
----- BEFORE ACTION

pub fn wibble() {
    let a: #(Int, _, Int) = #(1, "hello", 2)
                  ↑                         
}
    


----- AFTER ACTION

pub fn wibble() {
    let a: #(Int, String, Int) = #(1, "hello", 2)
}
