language-server/src/tests/snapshots/gleam_language_server__tests__action__replace_underscore_in_fn_expr_argument.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble() {\n    fn(a: _) { a + 2 }\n}\n    "
---
----- BEFORE ACTION

pub fn wibble() {
    fn(a: _) { a + 2 }
          ↑           
}
    


----- AFTER ACTION

pub fn wibble() {
    fn(a: Int) { a + 2 }
}
